# silpi

./: .gitignore  generate_requirements.py  pyproject.toml  re.txt  readme.md  requirements.txt  tailwind.config.js
accounts/: admin.py  forms.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
cart/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
cart/migrations/: 0001_initial.py  0002_order_orderitems.py  0003_rename_orderitems_orderitem.py  0004_orderitem_order.py
consultancy/: admin.py  models.py  urls.py  views.py
consultancy/migrations/: 0001_initial.py  0002_alter_consultancyproject_description.py
contact/: admin.py  forms.py  models.py  urls.py  views.py
contact/migrations/: 0001_initial.py  0002_receipient.py
main/: urls.py  views.py
posts/: admin.py  models.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_alter_post_details.py  0003_alter_post_title.py
products/: admin.py  forms.py  models.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_category_thumbnail.py  0003_alter_category_options.py  0004_alter_product_details.py
services/: admin.py
static/: package-lock.json  package.json  tailwind.config.js  webpack.config.js
static/src/: index.ts  main.scss  main.ts
superapp/: settings.py  urls.py
templates/: base.html
templates/base_components/: footer.html  header.html
templates/registration/: login.html
vehicles/: admin.py  models.py  urls.py  views.py
vehicles/migrations/: 0001_initial.py  0002_vehicleimage.py  0003_vehicle_actions_alter_vehicle_condition.py  (+2 more)
(+41 files in other folders)
